fix teachers section gaps

--- a/src/css/our-teachers.css
+++ b/src/css/our-teachers.css
@@ -1,17 +1,9 @@
-.teachers {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 48px 20px;
-}
-
 .teachers-head {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-bottom: 40px;
 }
-
 
 .teachers-caption {
     font-family: Manrope;
@@ -38,6 +30,7 @@
     max-width: 1024px;
     flex-direction: column;
     row-gap: 20px;
+    margin: 0 auto;
 }
 
 .teacher-card {
@@ -70,11 +63,6 @@
 }
 
 @media (min-width: 768px) {
-
-    .teachers {
-        margin: 32px 64px;
-    }
-
     .teachers-caption {
         font-size: 40px;
         line-height: 48px;
